added native query to FavorRepo having fixed salaryCalculate method